# dados-publicos-cnpj

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
src/auxiliary/: DUMP_RESTORE_README.md  README.md
src/auxiliary/python/: consultar_empresa.py  dump_and_restore.py  sql_dump_generator.py
src/etl/: ETL_dados_publicos_empresas.py  README.md  resume_etl.py
src/indexes/: create_indexes.py
src/sql/: README.md  banco_de_dados.sql  database_setup.sql
src/validation/: check_database_status.py
